# algorithmsanddata

./: CMakeLists.txt  README.md
lecture1/: insertionsort.cpp
lecture2/: binarysearch.cpp  bubblesort.cpp  combsort.cpp  insertionsort_same.cpp  mergesort.cpp  quicksort.cpp  selectionsort.cpp  swamppebblesort.cpp
lecture3/: mergesort.cpp
lecture4/: heap.cpp
lecture5/: quick_sort_lecture.cpp  quicksort_optimized1.cpp  quicksort_optimized2.cpp
